--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-    "manifest_version": "2",
-    "api_version": "1",
+    "required_api_version": "^2.0.0",
     "name": "GitLab",
     "description": "Quckly access your GitLab Projects and more.",
     "developer_name": "Bruno Paz",
